Fix overflowing menu on mobile

--- a/src/assets/styles/partials/_menu.scss
+++ b/src/assets/styles/partials/_menu.scss
@@ -2,7 +2,7 @@
 .langswitch {
   &__list {
     display: flex;
-    flex: wrap;
+    flex-wrap: wrap;
     column-gap: var(--step-1);
     padding: 0;
     margin: 0;
